--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -1,78 +1,116 @@
 .post{
-		flex: 0 1 40%;
-		margin: 15px;
-		background: #ffffff;
-		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-		border-radius: 10px;
+	flex: 0 1 45%;
+	position: relative;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	background: #ffffff;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+	color: #333333;
+	margin: 5px;
+	border-radius: 5px;
+	.authorInfos {
+		position: absolute;
+		top: 10px;
+		left: 10px;
+		align-items: center;
+		background: linear-gradient(89.87deg, rgba(255, 255, 255, 0.589) 12.05%, rgba(255, 255, 255, 0) 88.23%);
+		border-radius: 100px;
 		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		color: #333333;
-		.header{
-			position: relative;
-			.image{
-				img{
-					max-width: 100%;
-					border-radius: 10px 10px 0px 0px;
-				}
-			}
-			.authorInfos{
-				position: absolute;
-				z-index: 10;
-				top: 20px;
-				left: 20px;
-				display: flex;
-				justify-content: space-between;
-				align-items: center;
-				background: linear-gradient(89.87deg, rgba(255, 255, 255, 0.49) 12.05%, rgba(255, 255, 255, 0) 88.23%);
+		align-items: center;
+		.avatar {
+			img {
 				border-radius: 100px;
-				.avatar{
-						border-radius: 30px;
-					img{
-							border-radius: 30px;
-							border: 2px solid #FFFFFF;
-					}
-				}
-				.infos{
-					margin-left: 10px;
-					.fullName{
-						margin-bottom: 5px;
-						font-weight: 800;
-					}
-					.date{
-						font-weight: 800;
-					}
-				}
+				border: 2px solid #FFFFFF;
 			}
 		}
+		.infos {
+			margin-left: 3px;
+			.fullName {
+				font-weight: 800;
+			}
+			.date {
+				font-weight: 800;
+			}
+		}
+	}
+	.image{
+		margin-bottom: 15px;
+		img{
+			height: 350px;
+			width: 630px;
+			border-radius: 5px 5px 0px 0px;
+		}
+	}
+	.fullImage{
+		width: 1000px;
+			img {
+				width: 100%;
+				border-radius: 5px 5px 0px 0px;
+			}
+			border-bottom: 2px solid #1111;
+			margin-bottom: 15px;
+	}
+	.options{
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			opacity: 0;
+			visibility: hidden;
+			transition: all 0.3s 0s;
+			.edit{
+				cursor: pointer;
+				margin-right: 10px;
+				font-size: x-large;
+			}
+			.delete{
+				cursor: pointer;
+				font-size: x-large;
+			}
+			
+	}
+	&:hover {
+		.options {
+			opacity: 1;
+			visibility: visible;
+			transition: all 0.3s 0s;
+		}
+	}
+	.content{
+		padding:0px 10px 10px 10px;
 		.body{
-				margin: 15px 0px 10px 15px;
 			.title {
 				font-size: 26px;
 				text-transform: uppercase;
 				font-weight: 800;
+				color: #333333;
+				margin-bottom: 10px;
 				}
-				.text{
-					margin-top: 15px;
-					padding: 0px 10px 0px 0px;
+			.text{
 					font-weight: 400;
 					font-size: 16px;
 					font-family: Georgia, 'Times New Roman', Times, sans-serif;
+					color: #333333;
+					margin-bottom: 20px;
 				}
 		}
-		
 		.footer{
-			display: flex;
-			flex-direction: column;
-			margin: 15px 0px 10px 15px;
 			.tags {
+				cursor: pointer;
 				color: #3333;
 				font-weight: 800;
-				margin-bottom: 10px;
+				margin-bottom: 5px;
+				&:hover{
+					color: rgba(84, 82, 82, 0.436);
+				}
 			}
 			.views {
 				color: #3333;
 				font-weight: 800;
 			}
 		}
+	}
 }
