--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,6 @@
 .container{
-	margin-top: 110px;
-	align-self: center;
-	display: flex;
-	flex-wrap: wrap;
-	
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin: -15px;
 }
