--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,8 +1,9 @@
 .layout{
 	max-width:1400px;
 	margin:0px auto;
+	margin-top: 100px;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	flex-wrap: wrap;
+	align-items: stretch;
 	justify-content: center;
-}
+	}
