--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,5 +1,6 @@
 .container{
-	max-width: 500px;
+	
+	width: 500px;
 	padding: 20px;
 	border-radius: 5px;
 	box-shadow: 0px 0px 2px 2px #3333;
@@ -13,5 +14,12 @@
 		font-weight: 800;
 		line-height: 36px;
 		color:#0d80d8;
+		margin-bottom: 25px
+	}
+	.username{
+		margin-bottom: 15px;
+	}
+	.password{
+		margin-bottom: 25px;
 	}
 }
